--- a/templates/profile_security_sidebar.html
+++ b/templates/profile_security_sidebar.html
@@ -8,7 +8,7 @@
         <a href="{{ url_for('profile') }}" class="list-group-item list-group-item-action {% if request.endpoint == 'profile' %}active{% endif %}">
           Profile
         </a>
-        <a href="{{ url_for('security') }}" class="list-group-item list-group-item-action {% if request.endpoint == 'security' %}active{% endif %}">
+        <a href="{{ url_for('security_dashboard') }}" class="list-group-item list-group-item-action {% if request.endpoint == 'security_dashboard' %}active{% endif %}">
           Security
         </a>
         <a href="{{ url_for('logout') }}" class="list-group-item list-group-item-action text-danger">
