--- a/templates/admin_user_form.html
+++ b/templates/admin_user_form.html
@@ -37,7 +37,7 @@
     </div>
 
     <button type="submit" class="btn btn-success">{{ action }}</button>
-    <a href="{{ url_for('admin_manage_users') }}" class="btn btn-secondary">Cancel</a>
+    <a href="{{ url_for('manage_users') }}" class="btn btn-secondary">Cancel</a>
   </form>
 </div>
 </body>
