--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -231,3 +231,21 @@
                 width: 100%;
             }
         }
+button.add-to-cart {
+  all: unset;
+  display: inline-block;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #fff;
+  background-color: #198754;
+  border: 1px solid transparent;
+  border-radius: 0.375rem;
+  text-align: center;
+  cursor: pointer;
+  transition: background-color 0.15s ease-in-out;
+}
+
+button.add-to-cart:hover {
+  background-color: #157347;
+}
